remove lint errors